# soundon-copyright-bot

./: .env.example  .gitignore  README.md  backfill_after_anchor.py  backfill_after_anchor_result.json  backfill_ap_direitos_br_concurrent.py  backfill_dsp_fields.py  ben_dm_card.json  bot_p2p_chats.json  bot_runtime.py  br_dm_preview_post.json  br_target_backfill_result.json  daily_workflow.py  diagnose_br_skips_output.json  dm_overdue_filipe.py  dm_upc_lookup.py  five_recent_results.json  lark_mail_draft.py  last_card.json  last_card_callback.json  last_dm_card.json  last_dm_card_047752352704.json  last_patch_card.json  manager_alert_spla.py  manager_exclusions.json  next_after_upc_result.json  persistent_callback.out  persistent_callback.pid  posted_cards.json  posted_claims.json  posted_claims_ap_direitos_br.json  pyproject.toml  query_aeolus_individual.py  reconstruct_generic_scan_output.json  reproduce_batch_bug.py  reproduce_batch_bug_output.json  requirements.txt  resend_047752352704_filipe.py  retry_br_20260626_failed_cards.py  run_alert.py  (+15 more)
copyright_alert/: __init__.py  bot_runtime.py  daily_workflow.py  dm_action_card.py  dm_overdue_filipe.py  dsp_status_scan.py  handle_callback.py  jwt_healthcheck.py  lark_auth.py  lark_mail_draft.py  manager_alert_region.py  manager_alert_us.py  manager_exclusions.json  manager_exclusions.py  metadata_notice.py  oauth_setup.py  persistent_callback.py  region_guard.py  run_alert.py  spotify_reply.py  state_io.py  tag_managers.py  upc_exclusions.py
logs/: .gitkeep
runtime/: .gitkeep
scripts/: __init__.py
(+39 files in other folders)
