[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soundon-copyright-bot"
version = "1.0.0"
description = "SoundOn Copyright Alert Bot — copyright-claim intake, regional filtering, Lark notifications, tracker updates, and manager escalation for BR, SPLA, and US workflows."
requires-python = ">=3.9"
dependencies = [
    "lark-oapi>=1.2.0",
]

[tool.setuptools]
packages = [
    "copyright_alert",
    "scripts",
    "scripts.backfill",
    "scripts.diagnostics",
    "scripts.one_off",
]
